# CV

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
api/: __init__.py  celery_app.py  drift_monitor.py  feedback_store.py  main.py  metrics.py  middleware.py  ms_auth.py  routes.py  schemas.py  tasks.py  weight_fetcher.py
configs/: api.yaml  feedback.production.yaml  feedback.yaml  inference.yaml  layer1.yaml  layer2.yaml  layer3.yaml
data/: README.md
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.cloudrun  Dockerfile.gpu  Dockerfile.worker  prometheus.yml
docs/: chubb-api-guide.md
frontend/: admin.html  index.html
inference/: __init__.py  batching.py  claim_assessor.py  onnx_runtime.py  postprocessing.py  preprocessing.py  total_loss_screen.py  uncertainty.py
models/: __init__.py  class_constants.py  heads.py  layer1_detector.py  layer2_damage.py  layer3_severity.py  registry.py
monitoring/: alert-5xx.yaml  alert-latency.yaml
scripts/: _roboflow_common.py  download_weights.py  enrich_l3_manifest.py  evaluate.py  export_onnx.py  extract_crops.py  generate_sample_image.py  prepare_roboflow_dataset.py  prepare_roboflow_l2_dataset.py  prepare_roboflow_l3_dataset.py  prepare_vehide_dataset.py  run_inference.py  validate_dataset.py
tests/: conftest.py  test_admin.py  test_api.py  test_datasets.py  test_extract_crops.py  test_feedback.py  test_inference.py  test_models.py  test_no_damage.py  test_prepare_dataset.py  (+6 more)
(+22 files in other folders)
